--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>すぎにゃんARハント（2D版）</title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js">
 </head>
 <body>
-  <a-scene embedded arjs='sourceType: webcam; detectionMode: pattern; debugUIEnabled: false;'>
+  <a-scene embedded arjs="sourceType: webcam; detectionMode: pattern; debugUIEnabled: false;">
     <a-assets>
       <img id="sugibee-img" src="杉ビー.png">
       </a-assets>
 
-    <a-marker type='pattern' url='はちのす.patt'>
+    <a-marker type="pattern" url="はちのす.patt">
       <a-image
         src="#sugibee-img"
         width="1.0"
