--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <a-marker type="pattern" url="はちのす.patt">
       <a-image
-        src="#sugibee-img"
+        src="#杉ビー-img"
         width="1"
         height="1"
         position="0 0 0.05"
         rotation="-90 0 0"
-        id="sugibee-ar"
+        id="杉ビー-ar"
       ></a-image>
     </a-marker>
 
