--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
 <body>
-  <a-scene embedded arjs="sourceType: webcam; detectionMode: pattern; debugUIEnabled: false;">
+  <a-scene embedded arjs="patternRatio:0.50">
     <a-assets>
       <img id="sugibee-img" src="杉ビー.png">
       </a-assets>
