--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <a-scene embedded arjs="patternRatio:0.50">
     <a-assets>
-      <img id="sugibee-img" src="杉ビー.png">
+      <img id="杉ビー-img" src="杉ビー.png">
       </a-assets>
 
     <a-marker type="pattern" url="はちのす.patt">
@@ -17,9 +17,9 @@
         src="#杉ビー-img"
         width="1"
         height="1"
-        position="0 0 0.05"
-        rotation="-90 0 0"
-        id="杉ビー-ar"
+        position="0 0 0"
+        rotation="0 0 0"
+        id="杉ビー"
       ></a-image>
     </a-marker>
 
