--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <a-marker type="pattern" url="はちのす.patt">
       <a-image
-        src="#杉ビー-img"
+        src="杉ビー-img"
         width="1"
         height="1"
         position="0 0 0"
