--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         height="1"
         position="0 0 0"
         rotation="0 0 0"
-        id="杉ビー"
+        id="#杉ビー"
       ></a-image>
     </a-marker>
 
