--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
   <a-scene embedded arjs="patternRatio:0.50">
     <a-assets>
-      <img id="杉ビー-img" src="杉ビー.png">
+      <img id="sugibee-img" src="sugibee.png">
       </a-assets>
 
     <a-marker type="pattern" url="はちのす.patt">
       <a-image
-        src="杉ビー-img"
+        src="sugibee-img"
         width="1"
         height="1"
         position="0 0 0.05"
         rotation="-90 0 0"
-        id="#杉ビー"
+        id="#sugibee"
       ></a-image>
     </a-marker>
 
