--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img id="sugibee-img" src="sugibee.png">
       </a-assets>
 
-    <a-marker type="pattern" url="はちのす.patt">
+    <a-marker type="pattern" url="hachinosu.patt">
       <a-image
         src="sugibee-img"
         width="1"
