--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-assets>
       <img id="sugibee-img" src="sugibee.png">
       </a-assets>
-    <a-marker type="pattern" url="はちのす.patt">
+    <a-marker type="pattern" url="hachinosu.patt">
       <a-image
         src="#sugibee-img"
         width="1"
