--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>すぎにゃんARハント（2D版）</title>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-</head>
-<body>
-  <a-scene embedded arjs="sourceType: webcam; detectionMode: pattern; debugUIEnabled: true;">
-    <a-assets>
-      <img id="sugibee-img" src="sugibee.png">
-    </a-assets>
+  <head>
+    <meta charset="utf-8" />
+    <title>すぎにゃんARハント（2D版）</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
+  </head>
+  <body>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
+      <a-assets>
+        <img id="sugibee-img" src="sugibee.png" />
+      </a-assets>
 
-    <a-marker type="pattern" url="hachinosu.patt">
-      <a-image
-        src="#sugibee-img"
-        width="1"
-        height="1"
-        position="0 0 0"
-        rotation="0 0 0"
-        id="sugibee-ar">
-      </a-image>
-    </a-marker>
+      <!-- パターンマーカー -->
+      <a-marker type="pattern" url="hachinosu.patt">
+        <a-image
+          src="#sugibee-img"
+          width="1"
+          height="1"
+          position="0 0 0"
+          rotation="0 0 0"
+          id="sugibee-ar"
+        ></a-image>
+      </a-marker>
 
-    <a-entity camera></a-entity>
-  </a-scene>
-</body>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
