--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
           src="#sugibee-img"
           width="2"
           height="2"
-          position="-90 0 0"
+          position="0 0 0.5"
+          rotation="-90 0 0" 
         ></a-image>
       </a-marker>
 
