--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a-assets>
       <img id="sugibee-img" src="sugibee.png">
       <img id="kingbee-img" src="kingbee.png">
+      <img id="takarabee-img" src="kingbee.png">
       </a-assets>
     <a-marker type="pattern" url="hachinosu.patt">
       <a-image
@@ -27,6 +28,16 @@
     <a-marker type="pattern" url="hana1.patt">
       <a-image
         src="#kingbee-img"
+        width="1"
+        height="1"
+        position="0 0 0.05"
+        rotation="-90 0 0"
+      ></a-image>
+    </a-marker>
+
+<a-marker type="pattern" url="takara.patt">
+      <a-image
+        src="#takarabee-img"
         width="1"
         height="1"
         position="0 0 0.05"
