--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a-assets>
       <img id="sugibee-img" src="sugibee.png">
       <img id="kingbee-img" src="kingbee.png">
-      <img id="takarabee-img" src="kingbee.png">
+      <img id="takarabee-img" src="takarabee.png">
       </a-assets>
     <a-marker type="pattern" url="hachinosu.patt">
       <a-image
