--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <a-assets>
       <img id="sugibee-img" src="sugibee.png">
       <img id="kingbee-img" src="kingbee.png">
-      <img id="takarabee-img" src="takarabee.png">
+      <img id="takarabee-img" src="kingbee.png">
+      <img id="sugi3d-3d-model" src="sugi3d.glb">
       </a-assets>
     <a-marker type="pattern" url="hachinosu.patt">
       <a-image
@@ -44,6 +45,16 @@
         rotation="-90 0 0"
       ></a-image>
     </a-marker>
+
+<a-marker type="pattern" url="sugi3d.patt">
+      <a-image
+        src="#sugi3d-3d-model"
+        scale="0.1 0.1 0,1"
+        position="0 0 0.1"
+        rotation="0 0 0"
+      ></a-gltf-model>
+    </a-marker>
+
 
     <a-entity camera></a-entity>
   </a-scene>
