--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <img id="sugibee-img" src="sugibee.png">
       <img id="kingbee-img" src="kingbee.png">
       <img id="takarabee-img" src="takarabee.png">
-    　 
+      <img id="kuma-img" src="kuma.png">
+      
       </a-assets>
     <a-marker type="pattern" url="hachinosu.patt">
       <a-image
@@ -45,11 +46,22 @@
         rotation="-90 0 0"
       ></a-image>
     </a-marker> 
+
+    <a-marker type="pattern" url="daiya.patt">
+      <a-image
+        src="#kuma-img"
+        width="1"
+        height="1"
+        position="0 0 0.05"
+        rotation="-90 0 0"
+      ></a-image>
+    </a-marker> 
     
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
+
 
 
 
